# latent-explorer

./: .gitignore  README.md  pyproject.toml
outputs/EleutherAI/pythia-12b-deduped/: results.json  stats.json
outputs/EleutherAI/pythia-6.9b/: results.json  stats.json
outputs/EleutherAI/pythia-6.9b-deduped/: results.json  stats.json
outputs/databricks/dolly-v2-7b/: results.json  stats.json
outputs/google/gemma-7b-it/: results.json  stats.json
outputs/meta-llama/Llama-2-13b-chat-hf/: results.json  stats.json
outputs/meta-llama/Llama-2-70b-chat-hf/: results.json  stats.json
outputs/meta-llama/Llama-2-7b-chat-hf/: results.json  stats.json
outputs/meta-llama/Meta-Llama-3-8B-Instruct/: results.json  stats.json
outputs/microsoft/phi-1_5/: results.json  stats.json
outputs/microsoft/phi-2/: results.json  stats.json
outputs/mistralai/Mistral-7B-Instruct-v0.1/: results.json  stats.json
outputs/mistralai/Mistral-7B-Instruct-v0.2/: results.json  stats.json
outputs/stabilityai/stablelm-tuned-alpha-7b/: results.json  stats.json
outputs/tiiuae/falcon-40b-instruct/: results.json  stats.json
outputs/tiiuae/falcon-7b-instruct/: results.json  stats.json
outputs/togethercomputer/RedPajama-INCITE-7B-Chat/: results.json  stats.json
outputs/togethercomputer/RedPajama-INCITE-7B-Instruct/: results.json  stats.json
src/latent_explorer/: __init__.py  explorer.py  kg.py  llm.py  patcher.py
src/latent_explorer/resources/: in_context_examples.json
src/latent_explorer/utils/: __init__.py  data_loader.py  graph.py  io.py  triples.py  utils.py
src/latent_explorer/utils/litgpt_minimal/: __init__.py  base.py  model.py  tokenizer.py
tutorial/: script.py
